# operator

./: .coverage.data  .flake8  .git-blame-ignore-revs  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre_commit_config.yaml  .readthedocs.yaml  .sbomber-manifest-sdist.yaml  .sbomber-manifest-wheel.yaml  .travis.yml  .woke.yaml  AGENTS.md  CHANGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  STYLE.md  build_docs  copilot-instructions.md  coverage.xml  logger.py  pyproject.toml  release.py  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests  setup.py  tbd_examples.md  test_pebble_timeout.py  tox.ini
.claude/: CLAUDE.md  README.md  settings.json
.github/: check-conventional-pr-title.py  copilot-instructions.md  dependabot.yaml  dependabot.yml  generate-published-workflow.py  generate_charmcraft_extensions.py  patch-charm-deps.py  patch-charm-deps.sh  pull_request_template.md  update-best-practice-table.py  update-published-charms-tests-workflow.py  zizmor.yml
charm_tools/: letscharm.py  mkcharmtree.sh
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  .wokeignore  CharmsInDetail.md  FrameworkEvents.md  GettingStarted.md  Makefile  best-practices-generated  best-practices.md  charmhistory.md  charminterfaces.md  charmsindetail.md  conf.py  custom_conf.py  frameworkevents.md  gettingstarted.md  harness.rst  index.md  index.rst  ops.rst  pebble.rst  requirements.in  requirements.txt  ruff.toml  state-transition-testing.rst  storage.md  testing.md  update_requirements.sh
dont-merge/: fake-charm.py  metadata.yaml  otel-collector-config.yaml  readme.md  send-traces.py
examples/: README.md
examples/gosherve-demo/: .jujuignore  CHANGES.md  README.md  charmcraft.yaml  demo-routes  pyproject.toml  tox.ini
examples/gosherve-demo/slides/: gosherve-demo-slides.md
examples/gosherve-demo/src/: charm.py
examples/gosherve-demo/tests/: __init__.py
examples/gosherve-demo/tests/integration/: test_charm.py
examples/gosherve-demo/tests/unit/: test_charm.py
examples/machine-tinyproxy/: charmcraft.yaml  pyproject.toml  spread.yaml  tox.ini
examples/machine-tinyproxy/src/: charm.py  tinyproxy.py
examples/machine-tinyproxy/tests/integration/: conftest.py  test_charm.py
examples/machine-tinyproxy/tests/unit/: test_charm.py  test_tinyproxy.py
juju/: charm.py  framework.py  interface.py  main.py  model.py
op/: charm.py  framework.py  main.py  model.py  status.py
ops/: __init__.py  _aaa_venv_workaround.py  _action_params.py  _config.py  _databag.py  _main.py  _relationdata.py  charm.py  cloudevents.py  framework.py  hook_tools.py  hookcmds.py  jujucontext.py  jujulog.py  jujuversion.py  log.py  main.py  middlewares.py  model.py  pebble.py  relation.py  storage.py  testing.py  version.py
ops_scenario.egg-info/: PKG-INFO  SOURCES.txt
scenario/: __init__.py  _consistency_checker.py  capture_events.py  consistency_checker.py  consts.py  context.py  emitted_events.py  event_db.py  fs_mocks.py  logger.py  mocking.py  ops_main_mock.py  outputs.py  pytest_plugin.py  runtime.py  scenario-old.py  scenario.py  state.py  (+3 more)
test/charms/test_integration/: charmcraft.yaml  pyproject.toml
test/charms/test_integration/src/: charm.py
testing/: .gitignore  .pre-commit-config.yaml  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  README.md  UPGRADING.md  pyproject.toml  tox.ini
testing/.github/workflows/: quality_checks.yaml
testing/docs/: index.rst
testing/scenario/: __init__.py  context.py  errors.py  state.py
testing/src/: __init__.py  context.py  logger.py  mocking.py  ops_main_mock.py  runtime.py  state.py
testing/src/ops_scenario/: _consistency_checker.py  _ops_main_mock.py  logger.py
testing/src/ops_scenario.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/src/scenario/: __init__.py  _charmcraft_extensions.py  _consistency_checker.py  _environ.py  _ops_main_mock.py  _runtime.py  context.py  errors.py  logger.py  mocking.py  ops_main_mock.py  runtime.py  state.py
testing/tests/: __init__.py  helpers.py  readme-conftest.py  test_charm_spec_autoload.py  test_check_info.py  test_consistency_checker.py  test_context.py  test_context_on.py  test_emitted_events_util.py  test_plugin.py  test_runtime.py
testing/tests/benchmark/: __init__.py  test_testing.py
testing/tests/benchmark/charms/benchmark_charm/: charmcraft.yaml
testing/tests/benchmark/charms/benchmark_charm/src/: benchmark_charm.py
testing/tests/test_e2e/: conftest.py  test_actions.py  test_breakpoint.py  test_cloud_spec.py  test_config.py  test_deferred.py  test_event.py  test_juju_log.py  test_manager.py  test_network.py  test_pebble.py  test_play_assertions.py  test_ports.py  test_relations.py  test_resource.py  test_rubbish_events.py  test_secrets.py  test_state.py  test_status.py  test_storage.py  test_stored_state.py  test_trace_data.py  test_vroot.py
tools/: README.md  pyproject.toml
tools/src/ops_tools/: __init__.py  _attrdocs.py  _generate_juju_yaml.py  _generate_yaml.py  _update_charmcraft_yaml.py
tools/src/ops_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/tests-ugh/: test_generate_yaml_action.py  test_generate_yaml_config.py
tools/tests_tools/: __init__.py  test_attrdocs.py  test_generate_juju_yaml.py  test_generate_yaml_action.py  test_generate_yaml_config.py  test_update_charmcraft_yaml.py
tracing/: README.md  pyproject.toml  readme.md  tox.ini
tracing/ops_tracing/: __init__.py  _api.py  _backend.py  _buffer.py  _cert_transfer_models.py  _const.py  _databag.py  _export.py  _mock.py  _otlp_json.py  _tracing_models.py  api.py  backend.py  buffer.py  const.py  export.py  otlp_json.py
tracing/test/: __init__.py  conftest.py  test_api.py  test_backend.py  test_buffer.py  test_certificate_transfer_v1_conformance.py  test_equiavlence.py  test_models.py  test_nothing.py  test_storage.py  test_tracing_v2_conformance.py  test_upstream_schemas.py  test_vendor_models.py
tracing/test/sample_charm/: metadata.yaml
tracing/test/sample_charm/src/: charm.py
(+500 files in other folders)
