[project]
name = "ops"
description = "The Python library behind great charms"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name="The Charm Tech team at Canonical Ltd."},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyYAML==6.*",
    "websocket-client==1.*",
    # Wide version range to preempt conflicts when charms pin a version.
    "opentelemetry-api~=1.0",
    "importlib-metadata",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "ops-scenario==7.23.2",
]
tracing = [
    "ops-tracing==2.23.2",
]
# Empty for now, because Harness is bundled with the base install, but allow
# specifying the extra to ease transition later.
harness = []

[dependency-groups]
lint = [
    "ruff==0.11.2",
    "codespell==2.4.1",
]
docs = [
    "ops[testing,tracing]",
    "canonical-sphinx-extensions",
    "furo",
    "linkify-it-py",
    "myst-parser; python_version >= \"3.10\"",
    "pyspelling",
    "sphinx ~= 8.0.0; python_version >= \"3.10\"",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-notfound-page",
    "sphinx-tabs",
    "sphinxcontrib-jquery",
    "sphinxext-opengraph",
]
static = [
    "ops[testing,tracing]",
    "pyright==1.1.385",
    "typing_extensions~=4.2",
]
unit = [
    "ops[testing,tracing]",
    "pytest~=8.0",
    "jsonpatch~=1.33",
    "pydantic~=2.10",
    "eval-type-backport~=0.2; python_version < \"3.10\"",
]
xdist = [
    "pytest-xdist~=3.6",
]
coverage = [
    "coverage[toml]~=7.0",
]
benchmark = [
    "pytest-benchmark~=5.0; python_version >= \"3.9\"",
]
integration = [
    "ops[testing,tracing]",
    "pytest~=8.0",
    "pytest-operator~=0.23",
    "jubilant~=1.2",
    "minio~=7.2",
    "httpx~=0.28",
    "juju>=2.9,<4",
    "build",  # Until #1814 and #1813 are done
]

[project.urls]
"Homepage" = "https://documentation.ubuntu.com/ops/2.x/"
"Repository" = "https://github.com/canonical/operator"
"Issues" = "https://github.com/canonical/operator/issues"
"Documentation" = "https://documentation.ubuntu.com/ops/2.x/"
"Changelog" = "https://github.com/canonical/operator/blob/main/CHANGES.md"

[build-system]
requires = [
    "setuptools>=60",
]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["tracing", "testing"]

[tool.uv.sources]
ops = { workspace = true }
ops-scenario = { workspace = true }
ops-tracing = { workspace = true }

[tool.setuptools.packages.find]
include = ["ops"]

[tool.setuptools.dynamic]
version = {attr = "ops.version.version"}

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

# Formatting tools configuration
[tool.autopep8]
max-line-length = 99
ignore = ["W503"]
recursive = true
jobs = -1
aggressive = 3

# Linting tools configuration
[tool.ruff]
line-length = 99
target-version = "py38"
extend-exclude = ["docs/conf.py", "docs/.sphinx/"]

# Ruff formatter configuration
[tool.ruff.format]
quote-style = "single"
exclude = [
    "examples/*/lib/*",  # Ignore libs fetched during our testing (or by a charmer)
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pep8-naming
    "N",
    # flake8-builtins
    "A",
    # flake8-copyright
    "CPY",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # Ruff specific
    "RUF",
    # Perflint
    "PERF",
    # pyflakes-docstrings
    "D",
    # flake8-future-annotations
    "FA",
    # flake8-type-checking
    "TC",
]
ignore = [
    # Move application import into a type-checking block
    "TC001",
    # Move third-party import into a type-checking block
    "TC002",
    # Move standard library import into a type-checking block
    "TC003",
    # Use of `assert` detected
    "S101",
    # Do not `assert False`
    "B011",
    # `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure
    "S403",
    # `subprocess` module is possibly insecure
    "S404",

    # No explicit `stacklevel` keyword argument found
    "B028",

    # Return condition directly, prefer readability.
    "SIM103",
    # Use contextlib.suppress() instead of try/except: pass
    "SIM105",
    # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SIM117",

    # Missing docstring in magic method
    "D105",
    # Missing docstring in `__init__`
    "D107",

    # Manual dict comprehension.
    "PERF403",

    # Convert {} from `TypedDict` functional to class syntax
    # Note that since we have some `TypedDict`s that cannot use the class
    # syntax, we're currently choosing to be consistent in syntax even though
    # some can be moved to the class syntax.
    "UP013",

    ## Likely worth doing, but later.

    # `subprocess` call: check for execution of untrusted input
    "S603",
]
exclude = [
    "tracing/ops_tracing/vendor/*",
    "examples/*/lib/*",  # Ignore libs fetched during our testing (or by a charmer)
]

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    # All documentation linting.
    "D",

    # Hard-coded password string.
    "S105",
    # Hard-coded password function argument.
    "S106",

    # "Useless" expression.
    "B018"
]
"testing/*" = [
    # TODO: the below ignores should be fixed
    "A001",  # Variable is shadowing a Python builtin
    "B033",  # Sets should not contain duplicate item
    "B904",  # Use raise from within except
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D202",  # No blank lines allowed after function docstring
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D403",  # First word of the docstring should be capitalized
    "D415",  # First line should end with a period, question mark, or exclamation point
    "E501",  # Line too long
    "I001",  # isort
    "N818",  # Exception name should end with Error
    "S105",  # Possible hardcoded password
    "S311",  # Standard pseudo-random generators are not suitable for cryptographic purposes
    "RUF009",  # Do not perform function call in dataclass defaults
    "RUF052",  # Local dummy variable is accessed
    "RUF100",  # Unused `noqa` directive
    "SIM102",  # Use single if instead of nested if
    "SIM108",  # Use ternary operator instead if if-else block
    "PERF102",  # Use dict.values()
    "PERF203",  # try-except in loop body
    "PERF401",  # Use list.extend
]
"testing/tests/*" = [
    # All documentation linting.
    "D",
    # TODO: the below ignores should be fixed
    "CPY",  # flake8-copyright
    "I001",  # isort
    "B017",  # Do not assert blind exception
    "B018",  # Useless attribute access
    "E501",  # Line too long
    "N999",  # Invalid module name
    "N813",  # CamelCase imported as lowercase
    "S105",  # Possible hardcoded password
    "S108",  # Probably insecure usage of /tmp
    "W291",  # Trailing whitespace
    "UP037",  # Remove quotes from type annotation
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015",  # Prefer `next` over single element slice
    "SIM115",  # Use a context manager for opening files
]
"ops/_private/timeconv.py" = [
    "RUF001",  # String contains ambiguous `µ` (MICRO SIGN). Did you mean `μ` (GREEK SMALL LETTER MU)?
    "RUF002",  # Docstring contains ambiguous `µ` (MICRO SIGN). Did you mean `μ` (GREEK SMALL LETTER MU)?
]
"test/test_helpers.py" = [
    "S605",  # Starting a process with a shell: seems safe, but may be changed in the future; consider rewriting without `shell`
    "S607",  # Starting a process with a partial executable path
]
"docs/custom_conf.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "E266",  # Too many leading `#` before block comment
    "I001",  # Import block is un-sorted or un-formatted
    "RUF003",  # Comment contains ambiguous unicode characters (EN DASH, RIGHT SINGLE QUOTATION MARK)
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "UP031",  # Use format specifiers instead of percent format
]
"examples/*/tests/*" = [
    # All documentation linting.
    "D",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "min", "map", "range", "type", "TimeoutError", "ConnectionError", "Warning", "input", "format"]

[tool.pyright]
include = ["ops/*.py", "ops/_private/*.py", "test/*.py", "test/charms/*/src/*.py", "testing/src/*.py"]
exclude = ["tracing/*"]
extraPaths = ["testing", "tracing"]
pythonVersion = "3.8" # check no python > 3.8 features are used
pythonPlatform = "All"
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = false
reportImportCycles = false
reportMissingModuleSource = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false
reportUnnecessaryTypeIgnoreComment = "error"
disableBytesTypePromotions = false
stubPath = ""

[tool.codespell]
skip = './docs/_build,.venv,venv,build'
quiet-level = 3
