[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[project]
name = "ops-tools"

version = "1.2.0.dev0"

authors = [
    { name = "The Charm Tech team at Canonical Ltd." }
]
description = "Tools to extend Ops charm code"
license.text = "Apache-2.0"
keywords = ["juju", "ops", "charms"]

dependencies = [
    "ops==3.2.0.dev0",
    "PyYAML>=6.0.1",
    "typing_extensions~=4.2",
]
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
update-charmcraft-schema = "ops_tools._update_charmcraft_yaml:main"

[project.urls]
"Homepage" = "https://github.com/canonical/operator"
"Bug Tracker" = "https://github.com/canonical/operator/issues"

[bdist_wheel]
universal = 1
