[project]
name = "tracing-tester"
version = "0.1.0"
description = "Showcase how to tail workload log files"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.31.1",
    "ops-tracing",
    "ops",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.398",
    "ops-scenario",
    "ruff",
]
